[gd_scene load_steps=3 format=3 uid="uid://oblkbnrxuyrg"]

[ext_resource type="PackedScene" uid="uid://cb083mnw8oavl" path="res://New/Util/Components/color_base.tscn" id="1_jqyin"]
[ext_resource type="Script" uid="uid://dnmse31qovldx" path="res://New/MiniGames/MemoryGame/memory_game.gd" id="1_kig7u"]

[node name="MemoryGame" type="Node2D" groups=["Mini_games"]]
script = ExtResource("1_kig7u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1168.0
offset_bottom = 672.0
mouse_filter = 2
color = Color(0.74509805, 0.80784315, 1, 1)

[node name="ColorOptions" type="Node2D" parent="."]

[node name="ColorBase" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 96)

[node name="ColorBase2" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(440, 88)

[node name="ColorBase7" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1008, 96)

[node name="ColorBase3" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(720, 88)

[node name="ColorBase9" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1016, 504)

[node name="ColorBase10" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 520)

[node name="ColorBase11" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(448, 520)

[node name="ColorBase12" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(728, 512)

[node name="ColorBase8" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1008, 296)

[node name="ColorBase4" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 304)

[node name="ColorBase5" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(440, 304)

[node name="ColorBase6" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(728, 296)

[node name="ShowColor" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PuzzleTime" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="TimerBar" type="ProgressBar" parent="."]
offset_left = 48.0
offset_top = 637.0
offset_right = 1136.0
offset_bottom = 664.0

[connection signal="timeout" from="PuzzleTime" to="." method="_on_puzzle_time_timeout"]
